--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Test</title>
+    <style>
+        .item {
+            width: 200px;
+            height: 30px;
+            padding: 0 5px;
+            display: inline-block;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+    </style>
 </head>
 <body>
     <div id="wrapperContainer">
